新增: GUI页面添加更多设置按钮并更改平滑球体线框按钮显示位置