@@ -1,6 +1,5 @@
 package com.sakurakugu.autotorch.client;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -10,6 +9,7 @@ import com.mojang.blaze3d.systems.RenderSystem;
 import com.mojang.blaze3d.vertex.DefaultVertexFormat;
 import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.blaze3d.vertex.VertexConsumer;
+import com.mojang.blaze3d.vertex.VertexFormat;
 
 import com.sakurakugu.autotorch.network.AreaShape;
 import com.sakurakugu.autotorch.network.AreaZone;
@@ -20,7 +20,6 @@ import net.minecraft.client.renderer.RenderType;
 import net.minecraft.core.BlockPos;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
-import org.lwjgl.opengl.GL11;
 
 /** 在世界中持续绘制选区草稿、照明范围和所有排除范围。 */
 public final class SelectionRenderer {
@@ -28,13 +27,12 @@ public final class SelectionRenderer {
     private static final RenderType FACE_RENDER_TYPE = new RenderType(
             "autotorch_selection_faces",
             DefaultVertexFormat.POSITION_COLOR,
-            GL11.GL_QUADS,
+            VertexFormat.Mode.QUADS,
             1536,
             false,
             true,
             () -> {
-                // 1.16.5 使用固定渲染管线，纯色顶点绘制前必须关闭纹理。
-                RenderSystem.disableTexture();
+                RenderSystem.setShader(GameRenderer::getPositionColorShader);
                 RenderSystem.enableBlend();
                 RenderSystem.defaultBlendFunc();
                 RenderSystem.enableDepthTest();
@@ -51,7 +49,6 @@ public final class SelectionRenderer {
                 RenderSystem.depthMask(true);
                 RenderSystem.enableCull();
                 RenderSystem.disableBlend();
-                RenderSystem.enableTexture();
             }
     ) {};
     private static final int DRAFT_LINE_COLOR = 0xD070A0FF;
@@ -61,6 +58,9 @@ public final class SelectionRenderer {
     private static final int SELECTION_FACE_COLOR = 0x2850FF70;
     private static final int EXCLUSION_FACE_COLOR = 0x30FF5050;
     private static final int SPHERE_LONGITUDE_SEGMENTS = 24;
+    /** 平滑球体线框中相邻圆环的目标间距（方块）。 */
+    private static final double SMOOTH_SPHERE_LINE_SPACING = 8.0D;
+    private static final int MAX_SMOOTH_SPHERE_RINGS = 41;
     private static final int SPHERE_LATITUDE_SEGMENTS = 12;
     private static final double[] SPHERE_LONGITUDE_COS = new double[SPHERE_LONGITUDE_SEGMENTS + 1];
     private static final double[] SPHERE_LONGITUDE_SIN = new double[SPHERE_LONGITUDE_SEGMENTS + 1];
@@ -74,8 +74,7 @@ public final class SelectionRenderer {
     private static final long MAX_SPHERE_RADIUS_SQUARED =
             (long) AreaZone.MAX_SPHERE_RADIUS * AreaZone.MAX_SPHERE_RADIUS;
     private static final int MAX_CACHED_BLOCKY_SPHERES = 4;
-    private static final Map<Long, BlockySphereMesh> BLOCKY_SPHERE_CACHE =
-            new LinkedHashMap<Long, BlockySphereMesh>(8, 0.75F, true) {
+    private static final Map<Long, BlockySphereMesh> BLOCKY_SPHERE_CACHE = new LinkedHashMap<>(8, 0.75F, true) {
         @Override
         protected boolean removeEldestEntry(Map.Entry<Long, BlockySphereMesh> eldest) {
             return size() > MAX_CACHED_BLOCKY_SPHERES;
@@ -107,8 +106,7 @@ public final class SelectionRenderer {
         }
         if (!SelectionState.isOverlayEnabled()) {
             renderData = new RenderData(
-                    null, null, Collections.emptyList(), SelectionState.displayMode(),
-                    SelectionState.sphereDisplayMode(), Collections.emptyMap()
+                    null, null, List.of(), SelectionState.displayMode(), SelectionState.sphereDisplayMode(), Map.of()
             );
             renderRevision = SelectionState.renderRevision();
             return;
@@ -139,23 +137,23 @@ public final class SelectionRenderer {
             return;
         }
         poseStack.pushPose();
-        poseStack.translate(-camera.x(), -camera.y(), -camera.z());
+        // 顶点在提交时转换为相机相对坐标，避免大世界坐标分别转 float 后再相减造成精度损失。
         RenderType renderType = data.displayMode() == SelectionState.DisplayMode.LINES
                 ? RenderType.lines() : FACE_RENDER_TYPE;
-        sink.submit(poseStack, renderType, (pose, buffer) -> renderZones(pose, buffer, data));
+        sink.submit(poseStack, renderType, (pose, buffer) -> renderZones(pose, buffer, data, camera));
         poseStack.popPose();
     }
 
-    private static void renderZones(PoseStack.Pose pose, VertexConsumer buffer, RenderData data) {
+    private static void renderZones(PoseStack.Pose pose, VertexConsumer buffer, RenderData data, Vec3 camera) {
         if (data.draft() != null) {
-            renderZone(pose, buffer, data, data.draft(), DRAFT_LINE_COLOR, DRAFT_FACE_COLOR, 3.0F);
+            renderZone(pose, buffer, data, data.draft(), DRAFT_LINE_COLOR, DRAFT_FACE_COLOR, 3.0F, camera);
         }
         if (data.lightingZone() != null) {
             renderZone(pose, buffer, data, data.lightingZone(),
-                    SELECTION_LINE_COLOR, SELECTION_FACE_COLOR, 3.0F);
+                    SELECTION_LINE_COLOR, SELECTION_FACE_COLOR, 3.0F, camera);
         }
         for (AreaZone exclusion : data.exclusions()) {
-            renderZone(pose, buffer, data, exclusion, EXCLUSION_LINE_COLOR, EXCLUSION_FACE_COLOR, 2.0F);
+            renderZone(pose, buffer, data, exclusion, EXCLUSION_LINE_COLOR, EXCLUSION_FACE_COLOR, 2.0F, camera);
         }
     }
 
@@ -166,7 +164,8 @@ public final class SelectionRenderer {
             AreaZone zone,
             int lineColor,
             int faceColor,
-            float width
+            float width,
+            Vec3 camera
     ) {
         if (zone.shape() == AreaShape.SPHERE && zone.radiusSquared() > MAX_SPHERE_RADIUS_SQUARED) {
             return;
@@ -175,23 +174,22 @@ public final class SelectionRenderer {
             if (zone.shape() == AreaShape.SPHERE) {
                 if (data.sphereDisplayMode() == SelectionState.SphereDisplayMode.BLOCKY) {
                     renderBlockySphereLines(pose, buffer, zone,
-                            data.blockySphereMeshes().get(zone.radiusSquared()), lineColor, width);
+                            data.blockySphereMeshes().get(zone.radiusSquared()), lineColor, width, camera);
                 } else {
-                    renderSphereLines(pose, buffer, zone, lineColor, width);
+                    renderSphereLines(pose, buffer, zone, lineColor, width, camera);
                 }
             } else {
-                renderBoxLines(pose, buffer,
-                        fullBlockBounds(zone), lineColor, width);
+                renderBoxLines(pose, buffer, fullBlockBounds(zone), lineColor, width, camera);
             }
         } else if (zone.shape() == AreaShape.SPHERE) {
             if (data.sphereDisplayMode() == SelectionState.SphereDisplayMode.BLOCKY) {
                 renderBlockySphereFaces(pose, buffer, zone,
-                        data.blockySphereMeshes().get(zone.radiusSquared()), faceColor);
+                        data.blockySphereMeshes().get(zone.radiusSquared()), faceColor, camera);
             } else {
-                renderSphereFaces(pose, buffer, zone, faceColor);
+                renderSphereFaces(pose, buffer, zone, faceColor, camera);
             }
         } else {
-            renderBoxFaces(pose, buffer, fullBlockBounds(zone), faceColor);
+            renderBoxFaces(pose, buffer, fullBlockBounds(zone), faceColor, camera);
         }
     }
 
@@ -202,87 +200,105 @@ public final class SelectionRenderer {
         );
     }
 
-    private static void renderBoxLines(PoseStack.Pose pose, VertexConsumer buffer, AABB box, int color, float width) {
-        line(pose, buffer, box.minX, box.minY, box.minZ, box.maxX, box.minY, box.minZ, color, width);
-        line(pose, buffer, box.maxX, box.minY, box.minZ, box.maxX, box.minY, box.maxZ, color, width);
-        line(pose, buffer, box.maxX, box.minY, box.maxZ, box.minX, box.minY, box.maxZ, color, width);
-        line(pose, buffer, box.minX, box.minY, box.maxZ, box.minX, box.minY, box.minZ, color, width);
-        line(pose, buffer, box.minX, box.maxY, box.minZ, box.maxX, box.maxY, box.minZ, color, width);
-        line(pose, buffer, box.maxX, box.maxY, box.minZ, box.maxX, box.maxY, box.maxZ, color, width);
-        line(pose, buffer, box.maxX, box.maxY, box.maxZ, box.minX, box.maxY, box.maxZ, color, width);
-        line(pose, buffer, box.minX, box.maxY, box.maxZ, box.minX, box.maxY, box.minZ, color, width);
-        line(pose, buffer, box.minX, box.minY, box.minZ, box.minX, box.maxY, box.minZ, color, width);
-        line(pose, buffer, box.maxX, box.minY, box.minZ, box.maxX, box.maxY, box.minZ, color, width);
-        line(pose, buffer, box.maxX, box.minY, box.maxZ, box.maxX, box.maxY, box.maxZ, color, width);
-        line(pose, buffer, box.minX, box.minY, box.maxZ, box.minX, box.maxY, box.maxZ, color, width);
+    private static void renderBoxLines(PoseStack.Pose pose, VertexConsumer buffer, AABB box, int color, float width,
+                                       Vec3 camera) {
+        line(pose, buffer, box.minX, box.minY, box.minZ, box.maxX, box.minY, box.minZ, color, width, camera);
+        line(pose, buffer, box.maxX, box.minY, box.minZ, box.maxX, box.minY, box.maxZ, color, width, camera);
+        line(pose, buffer, box.maxX, box.minY, box.maxZ, box.minX, box.minY, box.maxZ, color, width, camera);
+        line(pose, buffer, box.minX, box.minY, box.maxZ, box.minX, box.minY, box.minZ, color, width, camera);
+        line(pose, buffer, box.minX, box.maxY, box.minZ, box.maxX, box.maxY, box.minZ, color, width, camera);
+        line(pose, buffer, box.maxX, box.maxY, box.minZ, box.maxX, box.maxY, box.maxZ, color, width, camera);
+        line(pose, buffer, box.maxX, box.maxY, box.maxZ, box.minX, box.maxY, box.maxZ, color, width, camera);
+        line(pose, buffer, box.minX, box.maxY, box.maxZ, box.minX, box.maxY, box.minZ, color, width, camera);
+        line(pose, buffer, box.minX, box.minY, box.minZ, box.minX, box.maxY, box.minZ, color, width, camera);
+        line(pose, buffer, box.maxX, box.minY, box.minZ, box.maxX, box.maxY, box.minZ, color, width, camera);
+        line(pose, buffer, box.maxX, box.minY, box.maxZ, box.maxX, box.maxY, box.maxZ, color, width, camera);
+        line(pose, buffer, box.minX, box.minY, box.maxZ, box.minX, box.maxY, box.maxZ, color, width, camera);
     }
 
-    private static void renderBoxFaces(PoseStack.Pose pose, VertexConsumer buffer, AABB box, int color) {
+    private static void renderBoxFaces(PoseStack.Pose pose, VertexConsumer buffer, AABB box, int color, Vec3 camera) {
         quad(pose, buffer, box.minX, box.minY, box.minZ, box.maxX, box.minY, box.minZ,
-                box.maxX, box.minY, box.maxZ, box.minX, box.minY, box.maxZ, color);
+                box.maxX, box.minY, box.maxZ, box.minX, box.minY, box.maxZ, color, camera);
         quad(pose, buffer, box.minX, box.maxY, box.maxZ, box.maxX, box.maxY, box.maxZ,
-                box.maxX, box.maxY, box.minZ, box.minX, box.maxY, box.minZ, color);
+                box.maxX, box.maxY, box.minZ, box.minX, box.maxY, box.minZ, color, camera);
         quad(pose, buffer, box.minX, box.minY, box.maxZ, box.maxX, box.minY, box.maxZ,
-                box.maxX, box.maxY, box.maxZ, box.minX, box.maxY, box.maxZ, color);
+                box.maxX, box.maxY, box.maxZ, box.minX, box.maxY, box.maxZ, color, camera);
         quad(pose, buffer, box.maxX, box.minY, box.minZ, box.minX, box.minY, box.minZ,
-                box.minX, box.maxY, box.minZ, box.maxX, box.maxY, box.minZ, color);
+                box.minX, box.maxY, box.minZ, box.maxX, box.maxY, box.minZ, color, camera);
         quad(pose, buffer, box.minX, box.minY, box.minZ, box.minX, box.minY, box.maxZ,
-                box.minX, box.maxY, box.maxZ, box.minX, box.maxY, box.minZ, color);
+                box.minX, box.maxY, box.maxZ, box.minX, box.maxY, box.minZ, color, camera);
         quad(pose, buffer, box.maxX, box.minY, box.maxZ, box.maxX, box.minY, box.minZ,
-                box.maxX, box.maxY, box.minZ, box.maxX, box.maxY, box.maxZ, color);
+                box.maxX, box.maxY, box.minZ, box.maxX, box.maxY, box.maxZ, color, camera);
     }
 
     private static void renderSphereLines(
-            PoseStack.Pose pose, VertexConsumer buffer, AreaZone zone, int color, float width
+            PoseStack.Pose pose, VertexConsumer buffer, AreaZone zone, int color, float width, Vec3 camera
     ) {
         double cx = zone.first().getX() + 0.5;
         double cy = zone.first().getY() + 0.5;
         double cz = zone.first().getZ() + 0.5;
         double radius = Math.sqrt(zone.radiusSquared()) + 0.5;
+        int rings = smoothSphereRingCount(radius);
+        double ringStep = radius / (rings / 2 + 1.0D);
+        int middle = rings / 2;
         for (int plane = 0; plane < 3; plane++) {
-            for (int segment = 0; segment < SPHERE_LONGITUDE_SEGMENTS; segment++) {
-                double a1 = SPHERE_LONGITUDE_COS[segment] * radius;
-                double b1 = SPHERE_LONGITUDE_SIN[segment] * radius;
-                double a2 = SPHERE_LONGITUDE_COS[segment + 1] * radius;
-                double b2 = SPHERE_LONGITUDE_SIN[segment + 1] * radius;
-                if (plane == 0) {
-                    line(pose, buffer, cx + a1, cy + b1, cz, cx + a2, cy + b2, cz, color, width);
-                } else if (plane == 1) {
-                    line(pose, buffer, cx + a1, cy, cz + b1, cx + a2, cy, cz + b2, color, width);
-                } else {
-                    line(pose, buffer, cx, cy + a1, cz + b1, cx, cy + a2, cz + b2, color, width);
+            for (int ring = 0; ring < rings; ring++) {
+                double offset = (ring - middle) * ringStep;
+                double circleRadius = Math.sqrt(Math.max(0.0D, radius * radius - offset * offset));
+                for (int segment = 0; segment < SPHERE_LONGITUDE_SEGMENTS; segment++) {
+                    double a1 = SPHERE_LONGITUDE_COS[segment] * circleRadius;
+                    double b1 = SPHERE_LONGITUDE_SIN[segment] * circleRadius;
+                    double a2 = SPHERE_LONGITUDE_COS[segment + 1] * circleRadius;
+                    double b2 = SPHERE_LONGITUDE_SIN[segment + 1] * circleRadius;
+                    if (plane == 0) {
+                        line(pose, buffer, cx + a1, cy + b1, cz + offset,
+                                cx + a2, cy + b2, cz + offset, color, width, camera);
+                    } else if (plane == 1) {
+                        line(pose, buffer, cx + a1, cy + offset, cz + b1,
+                                cx + a2, cy + offset, cz + b2, color, width, camera);
+                    } else {
+                        line(pose, buffer, cx + offset, cy + a1, cz + b1,
+                                cx + offset, cy + a2, cz + b2, color, width, camera);
+                    }
                 }
             }
         }
     }
 
-    private static void renderSphereFaces(PoseStack.Pose pose, VertexConsumer buffer, AreaZone zone, int color) {
+    private static int smoothSphereRingCount(double radius) {
+        int additionalRings = (int) (radius / SMOOTH_SPHERE_LINE_SPACING);
+        return Math.min(MAX_SMOOTH_SPHERE_RINGS, additionalRings * 2 + 1);
+    }
+
+    private static void renderSphereFaces(PoseStack.Pose pose, VertexConsumer buffer, AreaZone zone, int color,
+                                          Vec3 camera) {
         double cx = zone.first().getX() + 0.5;
         double cy = zone.first().getY() + 0.5;
         double cz = zone.first().getZ() + 0.5;
         double radius = Math.sqrt(zone.radiusSquared()) + 0.5;
         for (int latitude = 0; latitude < SPHERE_LATITUDE_SEGMENTS; latitude++) {
             for (int longitude = 0; longitude < SPHERE_LONGITUDE_SEGMENTS; longitude++) {
-                sphereQuad(pose, buffer, cx, cy, cz, radius, latitude, longitude, color);
+                sphereQuad(pose, buffer, cx, cy, cz, radius, latitude, longitude, color, camera);
             }
         }
     }
 
     private static void renderBlockySphereFaces(
-            PoseStack.Pose pose, VertexConsumer buffer, AreaZone zone, BlockySphereMesh mesh, int color
+            PoseStack.Pose pose, VertexConsumer buffer, AreaZone zone, BlockySphereMesh mesh, int color, Vec3 camera
     ) {
         BlockPos center = zone.first();
         for (int index = 0; index < mesh.faceStrips().length; index += 2) {
-            blockFaceStrip(pose, buffer, center, mesh.faceStrips()[index], mesh.faceStrips()[index + 1], color);
+            blockFaceStrip(pose, buffer, center, mesh.faceStrips()[index], mesh.faceStrips()[index + 1], color, camera);
         }
     }
 
     private static void renderBlockySphereLines(
-            PoseStack.Pose pose, VertexConsumer buffer, AreaZone zone, BlockySphereMesh mesh, int color, float width
+            PoseStack.Pose pose, VertexConsumer buffer, AreaZone zone, BlockySphereMesh mesh, int color, float width,
+            Vec3 camera
     ) {
         BlockPos center = zone.first();
         for (int edge : mesh.edges()) {
-            blockEdge(pose, buffer, center, edge, color, width);
+            blockEdge(pose, buffer, center, edge, color, width, camera);
         }
     }
 
@@ -291,7 +307,7 @@ public final class SelectionRenderer {
             SelectionState.SphereDisplayMode sphereDisplayMode
     ) {
         if (sphereDisplayMode != SelectionState.SphereDisplayMode.BLOCKY) {
-            return Collections.emptyMap();
+            return Map.of();
         }
         Map<Long, BlockySphereMesh> meshes = new HashMap<>();
         addBlockySphereMesh(meshes, draft);
@@ -299,7 +315,7 @@ public final class SelectionRenderer {
         for (AreaZone exclusion : exclusions) {
             addBlockySphereMesh(meshes, exclusion);
         }
-        return Collections.unmodifiableMap(new HashMap<>(meshes));
+        return Map.copyOf(meshes);
     }
 
     private static void addBlockySphereMesh(Map<Long, BlockySphereMesh> meshes, AreaZone zone) {
@@ -349,12 +365,12 @@ public final class SelectionRenderer {
 
     private static void addBlockFaceEdges(IntOpenHashSet edges, int x, int y, int z, int direction) {
         switch (direction) {
-            case 0: addXFaceEdges(edges, x + 1, y, z); break;
-            case 1: addXFaceEdges(edges, x, y, z); break;
-            case 2: addYFaceEdges(edges, x, y + 1, z); break;
-            case 3: addYFaceEdges(edges, x, y, z); break;
-            case 4: addZFaceEdges(edges, x, y, z + 1); break;
-            default: addZFaceEdges(edges, x, y, z); break;
+            case 0 -> addXFaceEdges(edges, x + 1, y, z);
+            case 1 -> addXFaceEdges(edges, x, y, z);
+            case 2 -> addYFaceEdges(edges, x, y + 1, z);
+            case 3 -> addYFaceEdges(edges, x, y, z);
+            case 4 -> addZFaceEdges(edges, x, y, z + 1);
+            default -> addZFaceEdges(edges, x, y, z);
         }
     }
 
@@ -411,7 +427,8 @@ public final class SelectionRenderer {
     }
 
     private static void blockEdge(
-            PoseStack.Pose pose, VertexConsumer buffer, BlockPos center, int encodedEdge, int color, float width
+            PoseStack.Pose pose, VertexConsumer buffer, BlockPos center, int encodedEdge, int color, float width,
+            Vec3 camera
     ) {
         int x = center.getX() + (encodedEdge & BLOCK_OFFSET_MASK) - BLOCK_OFFSET_BIAS;
         int y = center.getY() + ((encodedEdge >> BLOCK_OFFSET_BITS) & BLOCK_OFFSET_MASK) - BLOCK_OFFSET_BIAS;
@@ -419,114 +436,107 @@ public final class SelectionRenderer {
         int axis = encodedEdge >>> BLOCK_EDGE_AXIS_SHIFT;
         line(pose, buffer, x, y, z,
                 x + (axis == 0 ? 1 : 0), y + (axis == 1 ? 1 : 0), z + (axis == 2 ? 1 : 0),
-                color, width);
+                color, width, camera);
     }
 
     private static void blockFaceStrip(
-            PoseStack.Pose pose, VertexConsumer buffer, BlockPos center, int encodedFace, int length, int color
+            PoseStack.Pose pose, VertexConsumer buffer, BlockPos center, int encodedFace, int length, int color,
+            Vec3 camera
     ) {
         int x = center.getX() + (encodedFace & BLOCK_OFFSET_MASK) - BLOCK_OFFSET_BIAS;
         int y = center.getY() + ((encodedFace >> BLOCK_OFFSET_BITS) & BLOCK_OFFSET_MASK) - BLOCK_OFFSET_BIAS;
         int z = center.getZ() + ((encodedFace >> (BLOCK_OFFSET_BITS * 2)) & BLOCK_OFFSET_MASK) - BLOCK_OFFSET_BIAS;
         int direction = encodedFace >>> BLOCK_FACE_DIRECTION_SHIFT;
         switch (direction) {
-            case 0: quad(pose, buffer,
-                    x + 1, y, z, x + 1, y + 1, z, x + 1, y + 1, z + length, x + 1, y, z + length, color);
-                break;
-            case 1: quad(pose, buffer,
-                    x, y, z + length, x, y + 1, z + length, x, y + 1, z, x, y, z, color);
-                break;
-            case 2: quad(pose, buffer,
-                    x, y + 1, z + length, x + 1, y + 1, z + length, x + 1, y + 1, z, x, y + 1, z, color);
-                break;
-            case 3: quad(pose, buffer,
-                    x, y, z, x + 1, y, z, x + 1, y, z + length, x, y, z + length, color);
-                break;
-            case 4: quad(pose, buffer,
-                    x + 1, y, z + 1, x + 1, y + length, z + 1, x, y + length, z + 1, x, y, z + 1, color);
-                break;
-            default: quad(pose, buffer,
-                    x, y, z, x, y + length, z, x + 1, y + length, z, x + 1, y, z, color);
-                break;
+            case 0 -> quad(pose, buffer,
+                    x + 1, y, z, x + 1, y + 1, z, x + 1, y + 1, z + length, x + 1, y, z + length, color, camera);
+            case 1 -> quad(pose, buffer,
+                    x, y, z + length, x, y + 1, z + length, x, y + 1, z, x, y, z, color, camera);
+            case 2 -> quad(pose, buffer,
+                    x, y + 1, z + length, x + 1, y + 1, z + length, x + 1, y + 1, z, x, y + 1, z, color, camera);
+            case 3 -> quad(pose, buffer,
+                    x, y, z, x + 1, y, z, x + 1, y, z + length, x, y, z + length, color, camera);
+            case 4 -> quad(pose, buffer,
+                    x + 1, y, z + 1, x + 1, y + length, z + 1, x, y + length, z + 1, x, y, z + 1, color, camera);
+            default -> quad(pose, buffer,
+                    x, y, z, x, y + length, z, x + 1, y + length, z, x + 1, y, z, color, camera);
         }
     }
 
     private static void sphereQuad(
             PoseStack.Pose pose, VertexConsumer buffer, double cx, double cy, double cz, double radius,
-            int latitude, int longitude, int color
+            int latitude, int longitude, int color, Vec3 camera
     ) {
-        sphereVertex(pose, buffer, cx, cy, cz, radius, latitude, longitude, color);
-        sphereVertex(pose, buffer, cx, cy, cz, radius, latitude, longitude + 1, color);
-        sphereVertex(pose, buffer, cx, cy, cz, radius, latitude + 1, longitude + 1, color);
-        sphereVertex(pose, buffer, cx, cy, cz, radius, latitude + 1, longitude, color);
+        sphereVertex(pose, buffer, cx, cy, cz, radius, latitude, longitude, color, camera);
+        sphereVertex(pose, buffer, cx, cy, cz, radius, latitude, longitude + 1, color, camera);
+        sphereVertex(pose, buffer, cx, cy, cz, radius, latitude + 1, longitude + 1, color, camera);
+        sphereVertex(pose, buffer, cx, cy, cz, radius, latitude + 1, longitude, color, camera);
     }
 
     private static void sphereVertex(
             PoseStack.Pose pose, VertexConsumer buffer, double cx, double cy, double cz, double radius,
-            int latitude, int longitude, int color
+            int latitude, int longitude, int color, Vec3 camera
     ) {
         double horizontal = SPHERE_LATITUDE_COS[latitude] * radius;
-        applyColor(buffer.vertex(pose.pose(),
-                (float) (cx + SPHERE_LONGITUDE_COS[longitude] * horizontal),
-                (float) (cy + SPHERE_LATITUDE_SIN[latitude] * radius),
-                (float) (cz + SPHERE_LONGITUDE_SIN[longitude] * horizontal)), color).endVertex();
+        buffer.vertex(pose.pose(),
+                (float) (cx + SPHERE_LONGITUDE_COS[longitude] * horizontal - camera.x()),
+                (float) (cy + SPHERE_LATITUDE_SIN[latitude] * radius - camera.y()),
+                (float) (cz + SPHERE_LONGITUDE_SIN[longitude] * horizontal - camera.z())).color((color >> 16) & 0xFF, (color >> 8) & 0xFF, color & 0xFF, color >>> 24).endVertex();
     }
 
     private static void quad(
             PoseStack.Pose pose, VertexConsumer buffer,
             double x1, double y1, double z1, double x2, double y2, double z2,
-            double x3, double y3, double z3, double x4, double y4, double z4, int color
+            double x3, double y3, double z3, double x4, double y4, double z4, int color, Vec3 camera
     ) {
         // 选区面使用独立四边形且不写深度，保证水面等透明内容仍能正常渲染。
-        applyColor(buffer.vertex(pose.pose(), (float) x1, (float) y1, (float) z1), color).endVertex();
-        applyColor(buffer.vertex(pose.pose(), (float) x2, (float) y2, (float) z2), color).endVertex();
-        applyColor(buffer.vertex(pose.pose(), (float) x3, (float) y3, (float) z3), color).endVertex();
-        applyColor(buffer.vertex(pose.pose(), (float) x4, (float) y4, (float) z4), color).endVertex();
+        buffer.vertex(pose.pose(), (float) (x1 - camera.x()), (float) (y1 - camera.y()), (float) (z1 - camera.z())).color((color >> 16) & 0xFF, (color >> 8) & 0xFF, color & 0xFF, color >>> 24).endVertex();
+        buffer.vertex(pose.pose(), (float) (x2 - camera.x()), (float) (y2 - camera.y()), (float) (z2 - camera.z())).color((color >> 16) & 0xFF, (color >> 8) & 0xFF, color & 0xFF, color >>> 24).endVertex();
+        buffer.vertex(pose.pose(), (float) (x3 - camera.x()), (float) (y3 - camera.y()), (float) (z3 - camera.z())).color((color >> 16) & 0xFF, (color >> 8) & 0xFF, color & 0xFF, color >>> 24).endVertex();
+        buffer.vertex(pose.pose(), (float) (x4 - camera.x()), (float) (y4 - camera.y()), (float) (z4 - camera.z())).color((color >> 16) & 0xFF, (color >> 8) & 0xFF, color & 0xFF, color >>> 24).endVertex();
     }
 
     private static void line(
             PoseStack.Pose pose, VertexConsumer buffer,
             double x1, double y1, double z1, double x2, double y2, double z2,
-            int color, float width
+            int color, float width, Vec3 camera
     ) {
-        applyColor(buffer.vertex(pose.pose(), (float) x1, (float) y1, (float) z1), color)
-                .endVertex();
-        applyColor(buffer.vertex(pose.pose(), (float) x2, (float) y2, (float) z2), color)
-                .endVertex();
-    }
-
-    private static VertexConsumer applyColor(VertexConsumer vertex, int color) {
-        return vertex.color((color >> 16) & 0xFF, (color >> 8) & 0xFF,
-                color & 0xFF, (color >>> 24) & 0xFF);
-    }
-
-    private static final class RenderData {
-        private final AreaZone draft;
-        private final AreaZone lightingZone;
-        private final List<AreaZone> exclusions;
-        private final SelectionState.DisplayMode displayMode;
-        private final SelectionState.SphereDisplayMode sphereDisplayMode;
-        private final Map<Long, BlockySphereMesh> blockySphereMeshes;
-
-        private RenderData(
-                AreaZone draft, AreaZone lightingZone, List<AreaZone> exclusions,
-                SelectionState.DisplayMode displayMode, SelectionState.SphereDisplayMode sphereDisplayMode,
-                Map<Long, BlockySphereMesh> blockySphereMeshes
-        ) {
-            this.draft = draft;
-            this.lightingZone = lightingZone;
-            this.exclusions = exclusions;
-            this.displayMode = displayMode;
-            this.sphereDisplayMode = sphereDisplayMode;
-            this.blockySphereMeshes = blockySphereMeshes;
+        // 先转换为相机相对坐标，再转为 float，避免远离世界原点时的精度损失。
+        x1 -= camera.x();
+        y1 -= camera.y();
+        z1 -= camera.z();
+        x2 -= camera.x();
+        y2 -= camera.y();
+        z2 -= camera.z();
+        float nx = (float) (x2 - x1);
+        float ny = (float) (y2 - y1);
+        float nz = (float) (z2 - z1);
+        if (ny == 0.0F && nz == 0.0F && nx != 0.0F) {
+            nx = Math.copySign(1.0F, nx);
+        } else if (nx == 0.0F && nz == 0.0F && ny != 0.0F) {
+            ny = Math.copySign(1.0F, ny);
+        } else if (nx == 0.0F && ny == 0.0F && nz != 0.0F) {
+            nz = Math.copySign(1.0F, nz);
+        } else {
+            float length = (float) Math.sqrt(nx * nx + ny * ny + nz * nz);
+            nx /= length;
+            ny /= length;
+            nz /= length;
         }
+        buffer.vertex(pose.pose(), (float) x1, (float) y1, (float) z1)
+                .color((color >> 16) & 0xFF, (color >> 8) & 0xFF, color & 0xFF, color >>> 24).normal(pose.normal(), nx, ny, nz).endVertex();
+        buffer.vertex(pose.pose(), (float) x2, (float) y2, (float) z2)
+                .color((color >> 16) & 0xFF, (color >> 8) & 0xFF, color & 0xFF, color >>> 24).normal(pose.normal(), nx, ny, nz).endVertex();
+    }
 
-        private AreaZone draft() { return draft; }
-        private AreaZone lightingZone() { return lightingZone; }
-        private List<AreaZone> exclusions() { return exclusions; }
-        private SelectionState.DisplayMode displayMode() { return displayMode; }
-        private SelectionState.SphereDisplayMode sphereDisplayMode() { return sphereDisplayMode; }
-        private Map<Long, BlockySphereMesh> blockySphereMeshes() { return blockySphereMeshes; }
+    private record RenderData(
+            AreaZone draft,
+            AreaZone lightingZone,
+            List<AreaZone> exclusions,
+            SelectionState.DisplayMode displayMode,
+            SelectionState.SphereDisplayMode sphereDisplayMode,
+            Map<Long, BlockySphereMesh> blockySphereMeshes
+    ) {
     }
 
     public static RenderType faceRenderType() {
@@ -544,17 +554,7 @@ public final class SelectionRenderer {
         void render(PoseStack.Pose pose, VertexConsumer buffer);
     }
 
-    private static final class BlockySphereMesh {
-        private final int[] edges;
-        private final int[] faceStrips;
-
-        private BlockySphereMesh(int[] edges, int[] faceStrips) {
-            this.edges = edges;
-            this.faceStrips = faceStrips;
-        }
-
-        private int[] edges() { return edges; }
-        private int[] faceStrips() { return faceStrips; }
+    private record BlockySphereMesh(int[] edges, int[] faceStrips) {
     }
 
     private static final class IntArrayBuilder {
